# Genesys-Reader-EEP-Generated-Tool

./: .gitignore  README.md  Ui_main.py  generated_config.txt  main.py  main.ui  nuitka.bat  pyproject.toml
