[project]
name = "genesys-reader-eep-generated-tool"
version = "0.0.1"
description = "A tool to generate EEP file which can use for customizing your Genesys Reader Identificaion"
authors = [
    {name = "barryblueice",email = "barryblueice@outlook.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pyside6 (>=6.10.2,<7.0.0)"
]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

